# kimi-code-app

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN_SYSTEM.md  Dioxus.toml  PROGRESS.md  README.md  REQUIREMENTS.md
archive/: PROGRESS.md
assets/: AGENTS.md  main.css
assets/css/: 01-tokens.css  02-base.css  03-layout.css  04-sidebar.css  05-thread.css  06-composer.css  07-panels.css  08-modals.css  09-settings.css  10-components.css  11-animations.css  12-responsive.css  AGENTS.md
docs/: app-audit-2026-06-11.md
scripts/: AGENTS.md  check.sh  tauri-dev-server.sh
src/: AGENTS.md  actions.rs  app.rs  conversation.rs  ipc.rs  main.rs  markdown.rs  state.rs  tauri.rs  verify.rs
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: AGENTS.md
src-tauri/icons/: AGENTS.md  icon.icns
src-tauri/icons/android/: AGENTS.md
src-tauri/icons/android/mipmap-anydpi-v26/: AGENTS.md
src-tauri/icons/android/mipmap-hdpi/: AGENTS.md
src-tauri/icons/android/mipmap-mdpi/: AGENTS.md
src-tauri/icons/android/mipmap-xhdpi/: AGENTS.md
src-tauri/icons/android/mipmap-xxhdpi/: AGENTS.md
src-tauri/icons/android/mipmap-xxxhdpi/: AGENTS.md
src-tauri/icons/android/values/: AGENTS.md
src-tauri/icons/ios/: AGENTS.md
src-tauri/src/: AGENTS.md  acp.rs  automation.rs  browser.rs  checkpoint.rs  commands.rs  headless.rs  lib.rs  main.rs  memory.rs  multi_agent.rs  paths.rs  terminal.rs
src-tauri/src/acp/: AGENTS.md  mod.rs  protocol.rs  queue.rs  sessions.rs  store.rs  supervisor.rs
src-tauri/src/commands/: AGENTS.md  acp.rs  automation.rs  browser.rs  checkpoint.rs  config.rs  dialogs.rs  git.rs  kimi.rs  mcp.rs  memory.rs  mod.rs  multi_agent.rs  projects.rs  sessions.rs  settings_store.rs  terminal.rs
src/components/: AGENTS.md  app.rs  app.rs.bak  automation_pane.rs  browser_pane.rs  composer.rs  confirm_modal.rs  diff_pane.rs  login_modal.rs  memory_pane.rs  mod.rs  multi_agent_pane.rs  permission_modal.rs  session_modals.rs  settings.rs  sidebar.rs  status_bar.rs  terminal_pane.rs  thread.rs  topbar.rs
src/components/base/: AGENTS.md  kimi_badge.rs  kimi_button.rs  kimi_card.rs  kimi_dropdown.rs  kimi_empty_state.rs  kimi_icon.rs  kimi_input.rs  kimi_loading.rs  kimi_toast.rs  kimi_toggle.rs  kimi_tooltip.rs  mod.rs
src/components/delight/: kimi_avatar.rs  mod.rs
src/components/icons/: AGENTS.md  lucide.rs  mod.rs
src/design_tokens/: AGENTS.md  animation.rs  colors.rs  elevation.rs  mod.rs  spacing.rs  tests.rs  typography.rs
src/state/: AGENTS.md  mod.rs  model.rs  reducer.rs  signals.rs
