[package]
name = "kimi-code-app-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
gloo-timers = { version = "0.4.0", features = ["futures"] }

[lints]
workspace = true

[workspace]
members = ["src-tauri"]

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
strip = "debuginfo"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
